# advanced-text-processor

./: .gitignore  Cargo.toml  script.py
src/: lib.rs  main.rs
src/api/: atp_builder.rs  atp_processor.rs  block_builder.rs  conditional_builder.rs  mod.rs
src/builder/: atp_builder.rs  atp_processor.rs  conditional_builder.rs  mod.rs
src/bytecode/: mod.rs  parser.rs  reader.rs  transformer.rs  writer.rs
src/bytecode_parser/: mod.rs  parser.rs  reader.rs  transformer.rs  writer.rs
src/context/: execution_context.rs  mod.rs
src/ffi/: mod.rs
src/ffi/javascript/main/: builder.rs  mod.rs  processor.rs
src/globals/: mod.rs  table.rs  var.rs
src/macros/: mod.rs  parse_args.rs  to_bytecode.rs
src/text/: mod.rs  parser.rs  reader.rs  writer.rs
src/text_parser/: parser.rs  reader.rs  writer.rs
src/token_data/: mod.rs
src/token_data/token_defs/: atb.rs  ate.rs  cfw.rs  clw.rs  ctc.rs  ctr.rs  cts.rs  dla.rs  dlb.rs  dlc.rs  dlf.rs  dll.rs  dls.rs  htmle.rs  htmlu.rs  ins.rs  jcmc.rs  jkbc.rs  jpsc.rs  jsnc.rs  jsone.rs  jsonu.rs  mod.rs  padl.rs  padr.rs  raw.rs  rcw.rs  rev.rs  rfw.rs  rlw.rs  rmws.rs  rnw.rs  rpt.rs  rtl.rs  rtr.rs  slt.rs  splc.rs  splslt.rs  sslt.rs  tbs.rs  (+13 more)
src/tokens/: mod.rs
src/tokens/instructions/: ifdc.rs  mod.rs
src/tokens/instructions/blk/: mod.rs
src/tokens/instructions/cblk/: mod.rs
src/tokens/instructions/ifdc/: mod.rs  test.rs
src/tokens/transforms/: atb.rs  ate.rs  cfw.rs  clw.rs  ctc.rs  ctr.rs  cts.rs  dla.rs  dlb.rs  dlc.rs  dlf.rs  dll.rs  dls.rs  htmle.rs  htmlu.rs  ins.rs  jcmc.rs  jkbc.rs  jpsc.rs  jsnc.rs  jsone.rs  jsonu.rs  mod.rs  padl.rs  padr.rs  raw.rs  rcw.rs  rev.rs  rfw.rs  rlw.rs  rmws.rs  rnw.rs  rpt.rs  rtl.rs  rtr.rs  slt.rs  splc.rs  sslt.rs  tbs.rs  tla.rs  (+11 more)
src/tokens/transforms/atb/: mod.rs  test.rs
src/tokens/transforms/ate/: mod.rs  test.rs
src/tokens/transforms/cfw/: mod.rs  test.rs
src/tokens/transforms/clw/: mod.rs  test.rs
src/tokens/transforms/ctc/: mod.rs  test.rs
src/tokens/transforms/ctr/: mod.rs  test.rs
src/tokens/transforms/cts/: mod.rs  test.rs
src/tokens/transforms/dla/: mod.rs  test.rs
src/tokens/transforms/dlb/: mod.rs  test.rs
src/tokens/transforms/dlc/: mod.rs  (+1 more)
src/utils/: apply.rs  bytecode_utils.rs  cli.rs  errors.rs  mapping.rs  mod.rs  params.rs  test_helpers.rs  transforms.rs  validations.rs
tests/: benchmark.rs  bytecode.rs  params.rs  processor.rs
(+80 files in other folders)
