[package]
name = "atp_project"
version = "0.1.0"
edition = "2024"

[dependencies]
tempfile = { version = "3.20.0", optional = true }
colored = { version = "3.0.0", optional = true }
regex = "1.11.1"
shell-words = "1.1.0"
uuid = { version = "1.17.0", features = ["v4"] }
urlencoding = "2.1.3"
html-escape = "0.2.13"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }

[features]

default = []
bytecode = []
debug = ["colored"]
bytecode_debug = ["colored", "bytecode"]
test_access = ["default", "bytecode", "debug", "bytecode_debug", "tempfile"]
