[package]
name = "atp_project"
version = "0.1.0"
edition = "2024"

[dependencies]
tempfile = { version = "3.20.0", optional = true }
colored = { version = "3.0.0" }
regex = "1.11.1"
shell-words = "1.1.0"
uuid = { version = "1.17.0", features = ["v4"] }
urlencoding = "2.1.3"
html-escape = "0.2.13"
serde_json = "1.0.141"
serde = { version = "1.0.219", features = ["derive"] }
rand = { version = "0.9.2", optional = true }
random-string = { version = "1.1.0", optional = true }
clap = "4.5.41"
napi = "3.1.3"
napi-derive = "3.1.1"

[features]

default = []
bytecode = []
test_access = ["default", "bytecode", "tempfile", "rand", "random-string"]

[[bin]]
name = "atp"
path = "src/bin/atp.rs"
required-features = ["bytecode"]
